RESOLVED FIXED110100
[Soup] CookieJarSoup::deleteCookie() should stop looking for the cookie after it is removed
https://bugs.webkit.org/show_bug.cgi?id=110100
Summary [Soup] CookieJarSoup::deleteCookie() should stop looking for the cookie after...
Chris Dumez
Reported 2013-02-18 04:07:50 PST
CookieJarSoup::deleteCookie() currently retrieves the list of cookies that apply to a given URL, then iterates through the cookies to find the one with the right name and delete it. However, the current implementation does not break when the cookie is removed and it keeps iterating through the whole list for no reason.
Attachments
Patch (2.03 KB, patch)
2013-02-18 04:28 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2013-02-18 04:20:53 PST
Actually, we need to keep iterating so that the cookies get freed. However, we can introduce a boolean to stop comparing cookie names after the cookie was removed.
Chris Dumez
Comment 2 2013-02-18 04:28:26 PST
Chris Dumez
Comment 3 2013-02-18 04:59:50 PST
Could someone from GTK port please take a look before landing this?
Carlos Garcia Campos
Comment 4 2013-02-18 05:15:32 PST
LGTM
WebKit Review Bot
Comment 5 2013-02-18 05:31:16 PST
Comment on attachment 188847 [details] Patch Clearing flags on attachment: 188847 Committed r143204: <http://trac.webkit.org/changeset/143204>
WebKit Review Bot
Comment 6 2013-02-18 05:31:20 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.